objects/laptop__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_system__c</fullName>
        <label>Operating system</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>windows</fullName>
                </value>
                <value>
                    <fullName>windows second</fullName>
                </value>
                <value>
                    <fullName>mac</fullName>
                </value>
                <value>
                    <fullName>mac second</fullName>
                </value>
                <value>
                    <fullName>linux</fullName>
                </value>
                <value>
                    <fullName>linux second</fullName>
                </value>
                <value>
                    <fullName>windows reloaded</fullName>
                </value>
                <value>
                    <fullName>mac reloaded</fullName>
                </value>
                <value>
                    <fullName>linux reloaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4GB</fullName>
                </value>
                <value>
                    <fullName>8GB</fullName>
                </value>
                <value>
                    <fullName>12GB</fullName>
                </value>
                <value>
                    <fullName>16GB</fullName>
                </value>
                <value>
                    <fullName>4GB second</fullName>
                </value>
                <value>
                    <fullName>8GB second</fullName>
                </value>
                <value>
                    <fullName>12GB second</fullName>
                </value>
                <value>
                    <fullName>16GB second</fullName>
                </value>
                <value>
                    <fullName>4GB reloaded</fullName>
                </value>
                <value>
                    <fullName>8Gb reloaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>screen_size__c</fullName>
        <label>screen size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>laptop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>laptops</pluralLabel>
    <recordTypes>
        <fullName>first</fullName>
        <active>true</active>
        <label>first</label>
    </recordTypes>
    <recordTypes>
        <fullName>second</fullName>
        <active>true</active>
        <label>second</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>